style.css
/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
    margin: 0;
}

/* Remove list styles on ul,
ol elements with a list role,
which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
    list-style: none;
}

ul {
    padding: 0;
    margin: 0;
}

li {
    list-style: none;
}

/* Set core root defaults */
html:focus-within {
    scroll-behavior: smooth;
}

/* Set core body defaults */
body {
    min-height: 100vh;
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
    max-width: 100%;
    display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
    font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

:root {
    /******************************
    *    Colours                  *
    ******************************/
    --clr-dark-grey: 219 43% 16%;
    --clr-med-grey: 218 20% 36%;
    --clr-light-peach: 20 33% 93%;
    --clr-off-white: 20 29% 97%;
    --clr-blue: 264 100% 69%;
    --clr-purple: 292 76% 54%;
    --clr-orange: 31 100% 65%;

    --spacer-three-quarters: .75rem;
    --spacer-1: 1rem;
    --spacer-1-5: 1.5rem;
    --spacer-2: 2rem;
    --spacer-2-4: 2.4375rem;
    --spacer-2-8: 2.8rem;
    --spacer-3: 3rem;
    --spacer-3-5: 3.5rem;

    --fs-16: 1rem;
    --fs-14: 0.875rem;
    --fs-18: 1.125rem;
    --fs-38: 2.375rem;
    --fs-48: 3rem;
    --fs-56: 3.5rem;

}

body {
    font-family: 'Epilogue', sans-serif;
}

/* screen reader only */
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    /* added line */
    border: 0;
}

.wrapper {
    position: relative;
}

.container {
    padding-block: var(--spacer-1-5);
    padding-inline: var(--spacer-1);
}

.bg-dark-blue {
    background-color: hsl(var(--clr-dark-grey));
}

.text-light {
    color: hsl(var(--clr-off-white));
}

.text-dark {
    color: hsl(var(--clr-dark-grey));
}

.max-width {
    max-width: 69.25rem;
    margin-inline: auto;
}

.border-radius {
    border-radius: 15px;
    overflow: hidden;
}

.flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.uppercase {
    text-transform: uppercase;
}

.hero-content {
    margin-top: .5rem;
}

.hero-content-img-container {
    justify-content: end;
    align-items: baseline;
}

.hero-content-img {
    /*transform: scale(0.52);*/
    width: 44.5%;
}

.btn-request {
    display: inline-block;
    font-size: var(--fs-14);
    line-height: 1.7;
    text-decoration: none;
    padding: var(--spacer-three-quarters) var(--spacer-1);
    border: 1px solid hsl(var(--clr-dark-grey));
    border-radius: 6px;
    text-align: center;
}

.btn-request-main {
    /* color: hsl(var(--clr-off-white));
    background-color: hsl(var(--clr-dark-grey)); */
    font-size: var(--fs-18);
    margin-block: var(--spacer-1);

}

.hero-content-title {
    font-size: var(--fs-38);
    line-height: 1.3;
}

.hero-text-light,
.secondary-text-light {
    font-weight: 300;
}

.hero-content-text {
    font-size: var(--fs-16);
    margin-block-start: 1.5rem;
    margin-block-end: 1.2rem;
    line-height: 1.75;
    max-width: 22.625rem;
}

.hero-image {
    margin: auto;
}

.hero-image-container {
    margin-block: var(--spacer-2-8);
}

.stats-title {
    font-size: var(--fs-48);
    font-weight: 900;
}

.statistics-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--spacer-1);
}

.statistics-list-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.secondary-img-container {
    justify-content: center;
}

.aside-container {
    margin-block-start: 13.5rem;
    position: relative;
    overflow: visible;

}

.aside-image-container {
    position: relative;
    top: -11.5rem;
    padding-inline: 4rem;
}

.secondary {
    margin-block-start: -10.5rem;
    position: relative;
    padding-block-end: 3rem;
    padding-inline: 1rem;
}

.secondary-title {
    text-align: center;
    margin-block: 2rem;
}

.secondary-content-img {
    max-width: 49px;
    width: 50%;
}

.quorte {
    margin-block: var(--spacer-3);
    text-align: center;
    font-size: var(--fs-18);
    line-height: 1.8;
}

.quorte-title,
.quorte-content {
    text-align: center;
}

.quorte-title {
    font-size: var(--fs-18);
    font-weight: 900;
}

.footer {
    background-color: hsl(var(--clr-light-peach));
    position: absolute;
    width: 100%;
}

.footer-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: var(--spacer-2);
    padding-block: var(--spacer-3);
    max-width: 10rem;
    margin-inline: auto;
}

.social-media-list {
    display: flex;
    justify-content: space-around;
}

.social-media {
    width: 100%;
}


@media screen and (min-width: 45rem) {
    .container {
        padding-block: var(--spacer-2-4);
        padding-inline: var(--spacer-2-4);
    }

    .btn-request {
        padding: var(--spacer-three-quarters) var(--spacer-2);
        line-height: 2;
    }

    .hero {
        display: grid;
        grid-template-columns: 3fr 2fr;
        padding-block-start: .25rem;
    }

    .hero-content {
        /* flex: 1 1 60%;*/
        position: relative;
        padding-block-start: 2rem;
    }

    .hero-content-container {
        position: absolute;
        width: 67vw;
        z-index: 1;
    }

    .hero-content-title {
        font-size: var(--fs-56);
    }

    .statistics {
        grid-area: 2/1/3/5;
    }

    .statistics-list {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
    }

    .aside-container {
        margin-inline: var(--spacer-2-4);
        max-width: 61.25rem;
        margin-bottom: -28rem;
        z-index: 1;
    }

    .footer-container {
        padding-block-start: 35rem;
        margin-inline: var(--spacer-2-4);
        max-width: 61.25rem;
        flex-direction: row;
    }

    .social-media,
    .copyright,
    .footer-nav {
        flex: 1 1 33.33%;
    }

}

@media screen and (min-width: 67.5rem) {
    .hero {
        grid-template-columns: 2fr 2fr 1fr;
    }

    .statistics {
        grid-area: 1/3/1/4;
        display: grid;
        place-content: center;
    }

    .statistics-list {
        flex-direction: column;
    }

    .hero-content-img-container {
        justify-content: center;
    }

    .aside-container {
        display: flex;
        margin-inline: auto;
    }

    .secondary {
        margin-block-start: 0;
    }
    .footer-container {
       margin-inline: auto;
    }
}

